Add GET dataset endpoint (#140)
* Add GET dataset endpoint

* 1.3.0
